= HEAD

* Move :param and :param! hash matchers to the param_matchers plugin (jeremyevans)

* Add path_matchers plugin, for :extension, :prefix, and :suffix hash matchers (jeremyevans)

* Move Roda.hash_matcher to hash_matcher plugin (jeremyevans)

* Move Roda.request_module and .response_module to module_include plugin (jeremyevans)

* Move RodaResponse#set_cookie and #delete_cookie to cookies plugin (jeremyevans)

* Deprecate RodaRequest#full_path_info, use #path instead (jeremyevans)

* Add class_delegate to the delegate plugin (jeremyevans)

* Make not_found plugin clear headers for response if it is not found (jeremyevans)

* Make error_handler plugin use a new response instead of reusing existing response (jeremyevans)

* Make RodaResponse a subclass of Object instead of Rack::Response (jeremyevans)

= 1.2.0 (2014-12-17)

* Don't override explicit nil :default_encoding template option in the render plugin (jeremyevans)

* Add remaining_path and matched_path request methods (jeremyevans)

* Add slash_path_emty plugin, for considering a path of "/" as empty when doing a terminal match (jeremyevans)

* Remove def_verb_method request class method (jeremyevans)

* Support :add_script_name, :name, :url, and :url_only options when creating named paths in the path plugin (jeremyevans)

* Add match_affix plugin, for overriding default prefix/suffix used in match patterns (jeremyevans)

* Add empty_root plugin, for making root matcher also match empty string (jeremyevans)

* Add roda_class instance methods to RodaRequest and RodaResponse, to DRY up plugin code (jeremyevans)

* Add sinatra_helpers plugin, porting Sinatra::Helpers methods not covered by other plugins (jeremyevans)

* Don't set the default headers until the response is finished (jeremyevans)

* Add RodaRequest#default_redirect_status, so plugins can override the default status used for redirects (jeremyevans)
